Fix social media links on mobile

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -271,10 +271,4 @@ main
       line-height: 1.5em
 
   .more-info .badges
-    whitespace: nowrap
-
-    a, a:link, a:visited
-      min-width: auto
-
-    .twitter
-      margin-left: 32px
+    flex-direction: column
